data/derived/sp14/progs/unify/prog0789.ml.out
Characters 27-29:
  let _ = fixpoint (collatz, 48);;
                             ^^
Error: This expression has type int but an expression was expected of type
         string
